--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,17 @@ div {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+button {
+  all: unset;
+  cursor: pointer;
+  background-color: grey;
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px;
+}
+
+button:hover {
+  background-color: white;
+  color: grey;
+}
