--- a/style/navbar.css
+++ b/style/navbar.css
@@ -1,3 +1,22 @@
+/* container has position absolute so it won't take space from the canvas */
+#nav-container {
+  position: absolute;
+  height: 100px;
+  width: 100%;
+}
+
+/* navigation bar is hidden by default */
+#nav-bar {
+  transform: translateY(-150%);
+}
+
+/* upon nav-container hover, show havigation bar */
+#nav-container:hover #nav-bar {
+  transform: translateY(0);
+}
+
+
+/* contains list of clickable menu */
 ul {
   /* remove bullets */
   list-style-type: none;
@@ -11,26 +30,14 @@ ul {
   flex-direction: row;
 }
 
+/* each of the elements - 4 pages, ergo 25% each. % will need changing if # of pages changes */
 li {
-  width: 33%;
+  width: 25%;
   text-align: center;
 }
 
+/* remove decoration from links and set color to white */
 a {
   text-decoration: none;
   color: white;
-}
-
-#nav-bar {
-  transform: translateY(-150%); /* normal, hidden state */
-}
-
-#nav-container:hover #nav-bar {
-  transform: translateY(0); /* when parent is hovered */
-}
-
-#nav-container {
-  position: absolute;
-  height: 100px;
-  width: 100%;
 }
