--- a/style/navbar.css
+++ b/style/navbar.css
@@ -8,7 +8,14 @@
 /* navigation bar is hidden by default */
 #nav-bar {
   height: 100%;
-  transform: translateY(-150%);
+  opacity: 0;
+}
+
+/* class toggled by js */
+.navbar-disappear {
+  animation: navbar-disappear;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 
 nav {
@@ -17,7 +24,9 @@ nav {
 
 /* upon nav-container hover, show havigation bar */
 #nav-container:hover #nav-bar {
-  transform: translateY(0);
+  animation: navbar-appear;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 
 /* contains list of clickable menu */
@@ -42,11 +51,16 @@ li {
   width: 200px;
   height: 100%;
   margin: 0;
+}
 
+a {
   /* display flex */
   display: flex;
   justify-content: center;
   align-items: center;
+
+  width: 100%;
+  height: 100%;
 }
 
 /* change background of nav elements on hover */
@@ -84,7 +98,6 @@ a {
 
 /* shape title is at middle of top of the screen */
 #shape-title {
-
   /* set at top */
   position: absolute;
   top: 0px;
@@ -108,4 +121,23 @@ a {
 /* upon nav-container hover, show havigation bar */
 #nav-container:hover #shape-title {
   transform: translateY(-100px);
+}
+
+@keyframes navbar-appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+
+@keyframes navbar-disappear {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
