--- a/style/spiral.css
+++ b/style/spiral.css
@@ -1,4 +1,7 @@
 #scrolling-message-container {
+
+  top: 60px;
+
   width: 100%;
   height: 100%;
   display: flex;
@@ -10,7 +13,7 @@
   /* position absolute so it's floating on top of figure */
   position: absolute;
 
-  z-index: 3;
+  z-index: 2;
 }
 
 #scrolling-message {
