--- a/style/navbar.css
+++ b/style/navbar.css
@@ -11,9 +11,8 @@
   /* opacity: 0; */
   transform: translateY(-100px);
 
-
   background-color: black;
-  
+
   z-index: 1;
 }
 
@@ -87,6 +86,11 @@ a {
 
 /* at end of navigation bar there's an unclickable text item */
 #last-navbar-item {
+  /* display flex */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   /* reset background color */
   background-color: unset;
 
@@ -138,10 +142,8 @@ a {
   to {
     /* opacity: 1; */
     transform: translateY(0px);
-
   }
 }
-
 
 @keyframes disappear {
   from {
