--- a/style/base.css
+++ b/style/base.css
@@ -31,3 +31,18 @@ body {
   text-decoration: underline;
   cursor: pointer;
 }
+
+input {
+  all: unset;
+  appearance: none;
+  font-size: 15px;
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255, 0.3);
+}
+
+/* sliders */
+input[type="range"] {
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+}
